second steps in flex

--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,14 @@
     />
   </head>
   <body>
-    <h1>Witajcie w mojej kuchni</h1>
+    <h1>Witajcie w mojej kuchni f</h1>
+    <ol>
+      <div class="container">
+        <li class="item-3-h">1</li>
+        <li class="item-3-h">2</li>
+        <li class="item-3-h">3</li>
+      </div>
+    </ol>
+    <a> test linku </a>
   </body>
 </html>
